--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'Children''s stories'
 - !lcc 'PZ'
+- GITenberg
 tableOfContents: The land of the singing mouse -- The burden of a song -- The little
   river -- What the waters said -- Lake Belle-Marie -- The skull and the rose -- The
   man of the mountain -- At the place of the oaks -- The birth of the hours -- The
